src/objects/Activity_Detail__c.object
<CustomObject>
    <description>Junction object to associate child records to an Activity</description>
    <fields>
        <fullName>Activity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Activity ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Location__c</fullName>
        <label>Additional Location</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Information__c</fullName>
        <inlineHelpText>(Other Product details and related analysis</inlineHelpText>
        <label>Competitive Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activity Details</relationshipLabel>
        <relationshipName>Activity_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Request</label>
        <referenceTo>Event_Request__c</referenceTo>
        <relationshipLabel>Activity Details</relationshipLabel>
        <relationshipName>Activity_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_RES_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked if RES recorded is created</description>
        <label>Has RES Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_Button_Issues__c</fullName>
        <inlineHelpText>Significant anticipated questions and opportunities</inlineHelpText>
        <label>Hot Button Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Not_An_Orphan_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not An Orphan Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Call_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Call_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Notes__c</fullName>
        <inlineHelpText>Cell number, meeting location, special instructions, etc</inlineHelpText>
        <label>Other Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Past_Relationship__c</fullName>
        <inlineHelpText>Have you met them before?</inlineHelpText>
        <label>Past Relationship</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Presentation__c</fullName>
        <label>Presentation</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customized Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Presentation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saleslogix_ID__c</fullName>
        <description>Created for data migration purposes</description>
        <externalId>true</externalId>
        <label>Saleslogix ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Activity Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Activity Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>